make btn-info show on mobile and fix hover color

--- a/src/components/Footer/NewsletterForm.css
+++ b/src/components/Footer/NewsletterForm.css
@@ -12,6 +12,11 @@
   margin: 1em 0;
 }
 
+.subscribe:hover {
+  background-color: #E21674;
+  color: white;
+}
+
 .footer-row input {
   width: 100%;
   height: 4.375rem;
